refactor into controllers.js

--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,7 @@
 <script src="/reload/reload.js"></script>
 <script src="/vendor/angularjs-1.0.5/angular.min.js"></script>
 <script src="/vendor/angularjs-1.0.5/angular-resource.min.js"></script>
+<script src="/js/controllers.js"></script>
 <script src="/js/app.js"></script>
 
 
